--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "server",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "axios": "^1.5.1",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
-    "crypto": "^1.0.1",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "express-session": "^1.17.3",
-    "form-data": "^4.0.0",
-    "fs": "^0.0.1-security",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "knex": "^3.0.1",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "path": "^0.12.7",
-    "uuid": "^9.0.1"
+    "name": "server",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+      "start": "node ./bin/www",
+      "test": "cd ./test && node test.js"
+    },
+    "dependencies": {
+      "@fabcotech/rchain-toolkit": "3.0.1",
+      "@grpc/grpc-js": "^1.9.9",
+      "axios": "^1.5.1",
+      "bcryptjs": "^2.4.3",
+      "cookie-parser": "~1.4.4",
+      "crypto": "^1.0.1",
+      "debug": "~2.6.9",
+      "express": "~4.16.1",
+      "express-session": "^1.17.3",
+      "form-data": "^4.0.0",
+      "fs": "^0.0.1-security",
+      "http-errors": "~1.6.3",
+      "jade": "~1.11.0",
+      "knex": "^3.0.1",
+      "morgan": "~1.9.1",
+      "multer": "^1.4.5-lts.1",
+      "mysql": "^2.18.1",
+      "path": "^0.12.7",
+      "uuid": "^9.0.1"
+    }
   }
-}
+  
