--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@fabcotech/rchain-toolkit": "^3.0.2",
+    "@grpc/grpc-js": "^1.9.11",
+    "@tgrospic/rnode-grpc-js": "^0.11.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "elliptic": "^6.5.4",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "form-data": "^4.0.0",
