--- a/NFTvue/package.json
+++ b/NFTvue/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tgrospic/rnode-grpc-js": "^0.11.0",
     "axios": "^1.6.0",
     "element-plus": "^2.3.14",
     "vue": "^3.3.4",
