--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@fabcotech/rchain-toolkit": "^3.0.2",
+    "@grpc/grpc-js": "^1.9.11",
+    "@tgrospic/rnode-grpc-js": "^0.11.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
@@ -16,11 +19,13 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "jade": "~1.11.0",
     "knex": "^3.0.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "npm": "^10.2.4",
     "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
