--- a/NFTvue/package.json
+++ b/NFTvue/package.json
@@ -12,6 +12,9 @@
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "element-plus": "^2.3.14",
+    "google-protobuf": "^3.21.2",
+    "js-sha3": "^0.9.2",
+    "ramda": "^0.29.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
